@@ -1327,6 +1327,8 @@ typedef struct
   time_t  runtime_start;
   time_t  runtime_stop;
 
+  time_t  prepare_time;
+
   time_t  proc_start;
   time_t  proc_stop;
 
